# ifttt-twitter-webhook

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  dump_tweets_to_csv.py  migrate.sh  pyproject.toml  setup.py  test_chromadb.py  test_current_implementation.py  test_migration.py  webhook_server.service
config/: .env.example  config.json
docs/: database_backup_restore.md
migrations/: 000_init.sql  001_add_unique_constraint.sql  001_restore_tweets.sql  002_add_embeddings_table.sql  002_add_indexes_and_metadata.sql  README.md  apply_migration.py
requirements/: base.txt  dev.txt
scripts/: restore_tweets_from_csv.py
src/: main.py
src/iftttwh/: __init__.py  app.py
tests/: __init__.py  test_chromadb.py  test_current_implementation.py  test_webhook.py
