[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifttt-twitter-webhook"
version = "1.0.0"
description = "A webhook server for receiving IFTTT Twitter notifications"
readme = "docs/README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "Flask>=2.0.0",
    "python-dateutil>=2.8.0",
    "requests>=2.25.0",
    "transformers>=4.35.0",
    "torch>=2.1.0+cpu",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
]

[project.scripts]
iftttwh = "iftttwh.app:main"

[project.urls]
Homepage = "https://github.com/yourusername/ifttt-twitter-webhook"
Repository = "https://github.com/yourusername/ifttt-twitter-webhook"